[package]
name = "rzx"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.6.0", features = ["process", "macros", "rt", "rt-multi-thread", "io-std", "io-util", "fs"] }
nix = "0.20.0"
